Flush batching was right after all; my benchmark was wrong
The previous commit rejected flush batching on the strength of a 16-client
measurement. That measurement was of the harness, not the proxy. Its clients
were platform threads doing blocking reads, and they saturated below what the
proxy could do -- so batching, which trades latency for syscalls, looked like a
loss because the harness was latency-bound.

Rebuilt the clients on virtual threads. The ceiling went from 720k frames per
second to 1.3M, the proxy became the bottleneck at every concurrency worth
testing, and the answer inverted:

    connections   per-packet    batched
              8       517.8k     395.1k
             16       534.5k     585.4k
             32       553.6k     634.6k
             64       564.5k     644.6k

The crossover is between 8 and 16 connections. Below it, flushing per packet
wins by about 30%; above it, batching wins by 10-15% and holds. Anything with
real players on it is above the crossover, so the default is now on, with a
knob for the handful of connections where it is not.

Confirmed against real Paper backends rather than the synthetic one, since a
synthetic backend blasting frames is not how Minecraft sends. Forty fake players
switching between real servers, alternating the setting between runs to control
for drift, four runs each, measuring proxy CPU per MB actually forwarded:

    batched      6.4, 5.9, 5.8, 5.3 ms/MB   (mean 5.85)
    per-packet   6.5, 7.0, 5.8, 7.2 ms/MB   (mean 6.63)

About 12% less CPU for the same traffic. The distributions overlap, so that is a
consistent trend rather than a clean separation -- but it agrees with the
synthetic result at the same connection count, and the two were measured through
entirely different backends.

Also here, from thinking about what a large network does that a homelab does
not: SO_BACKLOG is now set explicitly. Netty follows the OS, which is commonly
128, and the one moment it matters is a proxy restart with every